--- a/SidebarMenu/Info.plist
+++ b/SidebarMenu/Info.plist
@@ -31,6 +31,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string> </string>
+	<key>NSCalendarsUsageDescription</key>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
